Fixed pagination on mobile devices
no-issue

We were using the wrong class for the next/previous buttons and rather
than the current page number being hidden at small screen sizes, the
buttons were

source: https://html5up.net/massively

--- a/assets/main/sass/layout/_ghost.scss
+++ b/assets/main/sass/layout/_ghost.scss
@@ -39,7 +39,7 @@
     width: 100%;
 }
 
-.page-number {
+.pagination .page {
     padding: 0 20px;
     border-color: transparent !important;
     color: #222 !important;;
